--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^3.1.0",
         "vue": "^3.2.39",
-        "vue-router": "^4.1.5"
+        "vue-router": "^4.1.5",
+        "vuex": "^4.0.2"
     }
 }
