--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@editorjs/editorjs": "^2.25.0",
+        "@editorjs/embed": "^2.5.3",
+        "@editorjs/header": "^2.6.2",
+        "@editorjs/list": "^1.7.0",
+        "@editorjs/table": "^2.0.4",
         "@vitejs/plugin-vue": "^3.1.0",
+        "file-manager-editor-js": "^1.4.1",
         "vue": "^3.2.39",
         "vue-router": "^4.1.5",
         "vuex": "^4.0.2"
