--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "@editorjs/editorjs": "^2.25.0",
-        "@editorjs/embed": "^2.5.3",
-        "@editorjs/header": "^2.6.2",
-        "@editorjs/list": "^1.7.0",
-        "@editorjs/table": "^2.0.4",
+        "@tiptap/extension-image": "^2.0.0-beta.202",
+        "@tiptap/extension-link": "^2.0.0-beta.202",
+        "@tiptap/extension-table": "^2.0.0-beta.202",
+        "@tiptap/extension-table-cell": "^2.0.0-beta.202",
+        "@tiptap/extension-table-header": "^2.0.0-beta.202",
+        "@tiptap/extension-table-row": "^2.0.0-beta.202",
+        "@tiptap/extension-underline": "^2.0.0-beta.202",
+        "@tiptap/starter-kit": "^2.0.0-beta.202",
+        "@tiptap/vue-3": "^2.0.0-beta.202",
         "@vitejs/plugin-vue": "^3.1.0",
-        "file-manager-editor-js": "^1.4.1",
+        "bootstrap": "^5.2.2",
+        "vee-validate": "^4.7.2",
         "vue": "^3.2.39",
         "vue-router": "^4.1.5",
-        "vuex": "^4.0.2"
+        "vue-select": "^4.0.0-beta.6",
+        "vuex": "^4.0.2",
+        "yup": "^0.32.11"
     }
 }
