--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@marcoschulte/vue3-progress": "^0.0.7",
         "@tiptap/extension-image": "^2.0.0-beta.202",
         "@tiptap/extension-link": "^2.0.0-beta.202",
         "@tiptap/extension-table": "^2.0.0-beta.202",
@@ -24,6 +25,7 @@
         "@tiptap/vue-3": "^2.0.0-beta.202",
         "@vitejs/plugin-vue": "^3.1.0",
         "bootstrap": "^5.2.2",
+        "reset-css": "^5.0.1",
         "vee-validate": "^4.7.2",
         "vue": "^3.2.39",
         "vue-router": "^4.1.5",
